--- a/crates/hello/Cargo.toml
+++ b/crates/hello/Cargo.toml
@@ -7,3 +7,4 @@ license = "MIT"
 [dependencies]
 reqwest = "0.12.15"
 tokio = { version = "1.44.2", features = ["full"] }
+worldlib ={path="../worldlib"}
